--- a/index.html
+++ b/index.html
@@ -219,13 +219,14 @@ background-size:100% 50%;
                          <h1 class="text-primary" style="font-family: 'Calibri'"><a name="projects"></a>Projects<br></h1>
                
                        <h2 align="middle">Disease Predictor<br><small><i>Web Application.</i></small></h2>
+			    <h3 align="middle"><small><i>(JavaScript)<br>(Node.js, MongoDB)</i></small></h3>
                         <p class="text-primary" style="font-family: 'Calibri'; font-size: 18px" align="middle">This project is meant to predict the disease user is suffering with by accepting all the symptoms as input.</p>
                         <p class="text-dark" style="font-family: 'Calibri'; font-size: 18px" align="right"><b>Role: </b>JavaScript frontend developer</p>
                             <br><br><br>
                         <h2 align="middle">Online Food Ordering System<br></h2>
                         <p class="text-primary" style="font-family: 'Calibri'; font-size: 18px" align="middle">
-                            Lets the user to order food online</b></p>
-                            <p class="text-dark" style="font-family: 'Calibri'; font-size: 18px" align="right"><b>Role: </b>JavaScript frontend developer</p>
+                           A Web based System which lets the user to order food online and apply for tiffin services.</b></p>
+                            
 
 				    <div class="progress1">
                             <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
