--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@ background-size:100% 50%;
                         </div>
                          <h1 class="text-primary" style="font-family: 'Calibri'"><a name="projects"></a>Projects<br></h1>
                
-                       <h2 align="middle">Disease Predictor<br><small><i>Web Application.</i></small></h2>
-			    <h3 align="middle"><small><i>(JavaScript)<br>(Node.js, MongoDB)</i></small></h3>
+                       <h2 align="middle">Disease Predictor<br><small><i>Web Application.</i>(JavaScript,<br>Node.js, MongoDB)</small></h2>
+			  
                         <p class="text-primary" style="font-family: 'Calibri'; font-size: 18px" align="middle">This project is meant to predict the disease user is suffering with by accepting all the symptoms as input.</p>
                         <p class="text-dark" style="font-family: 'Calibri'; font-size: 18px" align="right"><b>Role: </b>JavaScript frontend developer</p>
                             <br><br><br>
