--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ background-size:100% 50%;
                         <p class="text-primary" style="font-family: 'Calibri'; font-size: 18px" align="middle">This project is meant to predict the disease user is suffering with by accepting all the symptoms as input.</p>
                         <p class="text-dark" style="font-family: 'Calibri'; font-size: 18px" align="right"><b>Role: </b>JavaScript frontend developer</p>
                             <br><br><br>
-                        <h2 align="middle">Online Food Ordering System<br></h2>
+                        <h2 align="middle">Online Food Ordering System<br><small><i>Web based Application.</i></small></h2>
                         <p class="text-primary" style="font-family: 'Calibri'; font-size: 18px" align="middle">
                            A Web based System which lets the user to order food online and apply for tiffin services.</b></p>
                             
